--- a/static/css/scss/styles.scss
+++ b/static/css/scss/styles.scss
@@ -44,10 +44,14 @@ $error: #ff3e3e;
 
 .cwpcum-item__icon {
     display: inline-block;
-    width: 16px;
+    width: 30px;
+    height: 30px;
+    line-height: 30px;
     text-align: center;
     vertical-align: middle;
-    margin-right: 8px
+    margin-right: 8px;
+    border: 1px solid;
+    border-radius: 50%
 }
 
 .cwpcum-item__link {
